--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
 
 <body>
     <div class="container">
-   
+        <header>
+            <div class="header-logo">
+                <a href="index.html">
+                    <img src="img/lambda-black.png" alt="lambda logo">
+                </a>
+            </div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
+        <section>
+            <div class="jumbo-logo">
+                <img src="img/jumbo.jpg" alt="highway car light streak">
+            </div>
+        </section>
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
