Completed middle section of about page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class="container">
+
         <header>
             <div class="header-logo">
                 <a href="index.html">
@@ -27,11 +28,13 @@
                 <a href="#">Contact</a>
             </nav>
         </header>
+
         <section>
-            <div class="jumbo-logo">
+            <div class="index-header">
                 <img src="img/jumbo.jpg" alt="highway car light streak">
             </div>
         </section>
+
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
